kafka_example/kafka_infra/kafdrop-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/kafkaexample-kafka-net: "true"
    io.kompose.service: kafdrop
  name: kafdrop
spec:
  containers:
    - env:
        - name: JVM_OPTS
          value: -Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify
        - name: KAFKA_BROKERCONNECT
          value: PLAINTEXT://kafka-server:29092
        - name: SCHEMAREGISTRY_CONNECT
          value: http://schema-registry:8081
      image: obsidiandynamics/kafdrop
      name: kafdrop
      ports:
        - containerPort: 9000
      resources: {}
  restartPolicy: Never
status: {}
