kafka_example/kafka_infra/kafka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-server
  name: kafka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/kafkaexample-kafka-net: "true"
        io.kompose.service: kafka-server
    spec:
      containers:
        - env:
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
            - name: KAFKA_CFG_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka-server:29092,PLAINTEXT_HOST://127.0.0.1:9092
            - name: KAFKA_CFG_INTER_BROKER_LISTENER_NAME
              value: PLAINTEXT
            - name: KAFKA_CFG_LISTENERS
              value: PLAINTEXT://:29092,PLAINTEXT_HOST://:9092
            - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
              value: zookeeper-server:2181
          image: bitnami/kafka:latest
          name: kafka-server
          ports:
            - containerPort: 9092
          resources: {}
      restartPolicy: Always
status: {}
