kafka_example/kafka_infra/schema-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: schema-registry
  name: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: schema-registry
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/kafkaexample-kafka-net: "true"
        io.kompose.service: schema-registry
    spec:
      containers:
        - env:
            - name: SCHEMA_REGISTRY_HOST_NAME
              value: localhost
            - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
              value: PLAINTEXT://kafka-server:29092
            - name: SCHEMA_REGISTRY_LISTENERS
              value: http://0.0.0.0:8081
          image: confluentinc/cp-schema-registry:latest
          name: schema-registry
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
