kafka_example/kafka_infra/kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafdrop
  name: kafdrop
spec:
  type: NodePort
  ports:
    - nodePort: 31002
    # - name: "9000"
      port: 9000
      targetPort: 80
  selector:
    io.kompose.service: kafdrop
status:
  loadBalancer: {}
